<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroGanho"
    android:background="@color/black"
    android:orientation="vertical" >
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txv_nome_ganho"
        android:textAlignment="center"
        android:layout_marginLeft="5dp"
        android:textColor="@color/white"
        android:textSize="27sp"
        android:layout_marginTop="100dp" />      
    <EditText
        android:id="@+id/nome_ganho" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_nome_ganho"
        android:textSize="25sp" 
        android:textColor="@color/black"
        android:layout_margin="5dp"
        android:background="@color/white"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txv_valor"
        android:textAlignment="center"
        android:layout_marginLeft="5dp"
        android:textColor="@color/white"
        android:textSize="27sp"/>
    <EditText
        android:id="@+id/valor_ganho" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_valor"
        android:textSize="25sp" 
        android:textColor="@color/black"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:inputType="number"/>
     <LinearLayout 
         android:layout_width="wrap_content"      
	     android:layout_height="wrap_content"
         android:orientation="horizontal">
         
	    <Button
	        android:id="@+id/confirma_gasto"
	        android:layout_width="match_parent"      
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:text="@string/btn_confirma"       
	        android:background="@color/dark"
	        android:textColor="@color/light_green"
	        android:onClick="validar"
	        android:layout_margin="5dp" />
	    <Button
	        android:id="@+id/cancela_gasto"
	        android:layout_width="match_parent"      
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:text="@string/btn_cancelar"       
	        android:background="@color/dark"
	        android:textColor="@color/light_green"
	        android:onClick="cancelar"
	        android:layout_margin="5dp" />
	</LinearLayout>

    

</LinearLayout>