<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="225dp"
    android:layout_height="200dp"
    android:background="@color/dark"
    android:padding="12dip"
    tools:context=".Opcoes" >

    
    <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"    
     android:text="@string/btn_opcoes"
     android:textSize="20sp"
     android:textColor="@color/white"
     android:layout_gravity="center_horizontal" />
    
    <Button
     android:id="@+id/btn_finish_dialog"
     android:layout_height="35dp"
     android:layout_width="match_parent"
     android:text="@string/btn_cadastrar_planilha"
     android:layout_gravity="center_horizontal"
     android:onClick="IrCadastrarPlanilha"
     android:background="@color/light_green"
     android:layout_margin="5dp"
     android:padding="5dp"
     />
    
    <Button
     android:id="@+id/btn_visualizar_poupancas"
     android:layout_height="35dp"
     android:layout_width="match_parent"
     android:text="@string/btn_visualizar_poupancas"
     android:layout_gravity="center_horizontal"
     android:onClick="IrVisualizarPoupancas"
     android:background="@color/light_green"
     android:layout_margin="5dp"
     android:padding="5dp"
     />
    
    <Button
     android:id="@+id/btn_ok"
     android:layout_height="35dp"
     android:layout_width="match_parent"
     android:text="Ok"
     android:layout_gravity="center_horizontal"
     android:onClick="finishDialog"
     android:background="@color/light_green"
     android:layout_margin="5dp"
     android:padding="5dp"
     />

</LinearLayout>