<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaPrincipal"
    android:background="@color/black"
    android:orientation="vertical" >
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/txv_saldo_geral"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_margin="5dp" />
    
    <Button
        android:layout_width="match_parent"      
        android:layout_height="wrap_content"
        android:text="@string/btn_opcoes"
        android:background="@color/dark"
        android:textColor="@color/light_green"
        android:onClick="IrOpcoes"
        android:layout_margin="5dp" />
        
    <TextView
        android:id="@+id/lbl_planilhas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/lbl_planilhas"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_margin="5dp" />
    
    <TextView
        android:id="@+id/txv_planilhas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_margin="5dp" />

</LinearLayout>